--- a/000-main.tex
+++ b/000-main.tex
@@ -67,12 +67,14 @@
 \include{theory/SVMs}
 \include{theory/complexity}
 \include{theory/rkhs}
+\include{theory/kernels}
 
 \part{Problems}
 % Problem sessions
 \include{2022-10-02}
 \include{problems/2022-10-10}
 \include{problems/SVM}
+\include{problems/2022-11-21}
 
 \nocite{*}
 
