--- a/002-preamble_notes.tex
+++ b/002-preamble_notes.tex
@@ -34,6 +34,7 @@
 		},
 	marker/.style={%
 			enhanced,
+            parbox=false,
 			before skip balanced=2mm,after skip balanced=3mm,
 			boxrule=0.4pt,left=5mm,right=2mm,top=1mm,bottom=1mm,
 			colback=#1!50,
