--- a/2022-09-23.tex
+++ b/2022-09-23.tex
@@ -14,6 +14,9 @@ The available data \(D\) serves to reduce the uncertainty of the
 distribution.
 
 The Bayesian machinery makes use of the Bayes formula.
+\index{bayes!likelihood}
+\index{bayes!posterior}
+\index{bayes!prior}
 %
 \begin{align*}
 	P(D \mid \theta) \tag{likelihood} \\
