--- a/2022-09-30.tex
+++ b/2022-09-30.tex
@@ -28,6 +28,7 @@ s can be expressed as an optimization problem.
 
 \subsection{Typical choices for the regularizer} % (fold)
 
+\index{norm}
 Typically, we use the norm:
 \begin{equation*}
 	\Omega(f) = \lVert f \rVert_q^q, \quad q \geq 1
