--- a/2022-10-07.tex
+++ b/2022-10-07.tex
@@ -1,4 +1,7 @@
 \subsection{Procedure to learn a GLM}
+\index{GLM!procedure}
+\index{IRLS}
+\index{EFD}
 
 Reference: \fullcite{dobson_introduction_2018}
 
