Remove duplicate index entry

--- a/theory/complexity.tex
+++ b/theory/complexity.tex
@@ -20,7 +20,7 @@
 	$\mathcal{F}$.
 \end{definition}
 
-\begin{definition}{VC-dimension}{vc-dimension-cont}\index{vc-dimension}
+\begin{definition}{VC-dimension}{vc-dimension-cont}
 	Vapnik-Chervonenkis dimension \\[1em]
 	The VC-dimension of a hypothesis space $\mathcal{F}$ is the size
 	of the largest set $S$ that can be shattered by $\mathcal{F}$.
