Change first chapter to Introduction

--- a/2022-09-12.tex
+++ b/2022-09-12.tex
@@ -1,4 +1,4 @@
-\chapter[GLMs]{Generalized linear models}
+\chapter{Introduction}
 \section{Setting of the learning problem}
 
 \begin{definition}{Learning problem}{learning-problem}
