--- a/theory/rkhs.tex
+++ b/theory/rkhs.tex
@@ -196,7 +196,7 @@ And a dataset $\mathcal{D} = \{x^1, \dots, x^n\}$.
 	\begin{align*}
 		\argmin_{f \in \mathcal H_\kappa}
 		\left\{
-		l(f(x^1), y^1 , \ldots , l(f(x^n), y^n) + \Omega(\lVert f \rVert_{\mathcal H_\kappa})
+		l(f(x^1), y^1) , \ldots , l(f(x^n), y^n) + \Omega(\lVert f \rVert_{\mathcal H_\kappa})
 		\right\}
 	\end{align*}
 	has solutions\footnote{There is always at least one solution with this form. (There could be more than one and others that do not have this form)} of the form:
