--- a/theory/SVMs.tex
+++ b/theory/SVMs.tex
@@ -14,10 +14,10 @@
 The sum is a \iemph{binary classification}:
 \begin{equation}
 	\mathcal{F}_{\text{lin}} = \left\{
-    x \to f\left(\omega^Tx + b\right) \mid
-    \omega \in \mathds{R}^d,
-    \; b \in \mathds{R}
-  \right\}
+	x \to f\left(\omega^Tx + b\right) \mid
+	\omega \in \mathds{R}^d,
+	\; b \in \mathds{R}
+	\right\}
 \end{equation}
 
 The equation $\pi : \omega^Tx + b = 0$ defines a hyperplane.
@@ -36,20 +36,20 @@ We assume from now on that $D$ is \emph{linsep}.
 
 \begin{definition}{geometric margin}{}
 	The \iemph{geometric margin} of a linear
-  classifier $f \to \omega^Tx + b$ \emph{at a data point $x$} is the
+	classifier $f \to \omega^Tx + b$ \emph{at a data point $x$} is the
 	euclidean distance from $x$ to the hyperplane $\pi$:
 	\begin{equation*}
 		\gamma(x) = \frac{\lVert\omega^Tx + b\rVert}{\lVert\omega\rVert} \tag{geometric margin at $x$}
 	\end{equation*}
 
-  \tcbline
+	\tcbline
 
-  The \iemph{geometric margin of a linear classifier} on $D$ is the minimum of
-these geometric margins over all data points. That is, it is the distance
-from the closest point to the hyperplane:
-\begin{equation*}
-	\gamma = \min_{x \in D} \gamma(x) \tag{geometric margin of a linear classifier}
-\end{equation*}
+	The \iemph{geometric margin of a linear classifier} on $D$ is the minimum of
+	these geometric margins over all data points. That is, it is the distance
+	from the closest point to the hyperplane:
+	\begin{equation*}
+		\gamma = \min_{x \in D} \gamma(x) \tag{geometric margin of a linear classifier}
+	\end{equation*}
 
 \end{definition}
 
@@ -153,8 +153,8 @@ The Lagrangian function:
 % 2022-10-14
 
 \begin{align*}
-  \mathscr{L}_\text{dual}(\alpha) = \sum_{i=1}^n \alpha_i - \frac{1}{2} \mathlarger{\sum_{i=1}^n} \sum_{j=1}^n \alpha_i \alpha_j y^i y^j (x^i)^T x^j \\
-	\text{goal} \quad \max_{\alpha} \mathscr{L}_\text{dual}(\alpha)                                                                       \\
+	\mathscr{L}_\text{dual}(\alpha) = \sum_{i=1}^n \alpha_i - \frac{1}{2} \mathlarger{\sum_{i=1}^n} \sum_{j=1}^n \alpha_i \alpha_j y^i y^j (x^i)^T x^j \\
+	\text{goal} \quad \max_{\alpha} \mathscr{L}_\text{dual}(\alpha)                                                                                    \\
 	\text{subject to} \quad
 	\begin{rcases*}
 		\sum_{i=1}^n \alpha_i y^i = 0 \\
@@ -240,9 +240,9 @@ The Lagrangian function:
 \begin{theorem}{LOO analysis}{looanal}\index{LOO!analysis}
 
 	\begin{lemma}{}{}
-			The average LOO-CV error $f_n$ data sets of size $n \geq 2$
-			is an unbiased estimator of the average (true) generalization
-			error for data sets of size $n=1$.
+		The average LOO-CV error $f_n$ data sets of size $n \geq 2$
+		is an unbiased estimator of the average (true) generalization
+		error for data sets of size $n=1$.
 		\begin{align*}
 			\mathds{E}_{D^n \sim p^n}
 			\left[ \hat{R}_{LOOCV}(f_{D_n}) \right] =
@@ -257,10 +257,10 @@ The Lagrangian function:
 			\frac{\left| SV(f_{D_n}) \right|}{n + 1}
 			\right]
 	\end{equation*}
-  \tcblower
-  \begin{note}
-	  This is an argument in favor of \iemph{sparsity} (def.~\ref{def:sparsity}).
-  \end{note}
+	\tcblower
+	\begin{note}
+		This is an argument in favor of \iemph{sparsity} (def.~\ref{def:sparsity}).
+	\end{note}
 \end{theorem}
 
 \begin{definition}{Sparsity}{sparsity}\index{sparsity}
@@ -398,54 +398,54 @@ these two goals.
 \end{align*}
 
 \begin{figure}[H]
-\begin{tikzpicture}
-	\pgfmathsetseed{1234}
-	\begin{axis}[
-			width=0.8\textwidth,
-      height=0.5\textwidth,
-      axis equal,
-			xmin=-3,xmax=3.5,
-			ymin=-1,ymax=5,
-			xtick={0,1},
-			ytick={0,1},
-			axis lines=middle,
-			xlabel=$z$,
-      yticklabel style={below left},
-      legend pos=north east,
-      legend cell align={left}
-		]
-		% quadratic hinge loss
-		\draw[green!70!black, line width=2pt] (1,0) -- (2,0);
-		\addplot[green!70!black, line width=2pt, domain=-3:1] {(1 - x)^2};
-		\addlegendentry{quadratic hinge loss}
+	\begin{tikzpicture}
+		\pgfmathsetseed{1234}
+		\begin{axis}[
+				width=0.8\textwidth,
+				height=0.5\textwidth,
+				axis equal,
+				xmin=-3,xmax=3.5,
+				ymin=-1,ymax=5,
+				xtick={0,1},
+				ytick={0,1},
+				axis lines=middle,
+				xlabel=$z$,
+				yticklabel style={below left},
+				legend pos=north east,
+				legend cell align={left}
+			]
+			% quadratic hinge loss
+			\draw[green!70!black, line width=2pt] (1,0) -- (2,0);
+			\addplot[green!70!black, smooth, line width=2pt, domain=-3:1] {(1 - x)^2};
+			\addlegendentry{quadratic hinge loss}
 
-		% hinge loss
-		\draw[blue, line width=2pt] (-4,5) -- (1,0) -- (2,0);
-		\addlegendimage{draw=blue, line width=2pt};
-		\addlegendentry{hinge loss}
+			% hinge loss
+			\draw[blue, line width=2pt] (-4,5) -- (1,0) -- (2,0);
+			\addlegendimage{draw=blue, line width=2pt};
+			\addlegendentry{hinge loss}
 
-		% 0 1 loss
-		\draw[red, line width=2pt] (-5,1) -- (0,1);
-		\draw[red, line width=2pt](0,0) -- (2,0);
-		\draw[red, line width=2pt,dotted](2,0) -- (3,0);
-		\addlegendimage{draw=red, line width=2pt};
-		\addlegendentry{0-1 loss}
+			% 0 1 loss
+			\draw[red, line width=2pt] (-5,1) -- (0,1);
+			\draw[red, line width=2pt](0,0) -- (2,0);
+			\draw[red, line width=2pt,dotted](2,0) -- (3,0);
+			\addlegendimage{draw=red, line width=2pt};
+			\addlegendentry{0-1 loss}
 
 
-		\node[red, fill=white, draw, circle, inner sep=0pt, minimum size=5pt] at (0,1) {};
-		\node[red, fill=red, draw, circle, inner sep=0pt, minimum size=5pt] at (0,0) {};
-	\end{axis}
-\end{tikzpicture}
-\caption{Loss functions for the SVM (classification case)}\label{fig:loss}
+			\node[red, fill=white, draw, circle, inner sep=0pt, minimum size=5pt] at (0,1) {};
+			\node[red, fill=red, draw, circle, inner sep=0pt, minimum size=5pt] at (0,0) {};
+		\end{axis}
+	\end{tikzpicture}
+	\caption{Loss functions for the SVM (classification case)}\label{fig:loss}
 \end{figure}
 
 \begin{align*}
 	L_{0/1} (z)  & = \begin{cases}
 		                 0 & \text{if } z \geq 0 \\
 		                 1 & \text{if } z < 0
-                   \end{cases} \equiv \mathds{1}_{\{z \leq 0\}}          \\
-	L_{hl} (z)   & = \max \{ 0, 1 - z \}                &  & (q=1) \\
-	L_{hl^2} (z) & = \max \{ 0, 1 - z \}^2              &  & (q=2) \\
+	                 \end{cases} \equiv \mathds{1}_{\{z \leq 0\}}          \\
+	L_{hl} (z)   & = \max \{ 0, 1 - z \}                        &  & (q=1) \\
+	L_{hl^2} (z) & = \max \{ 0, 1 - z \}^2                      &  & (q=2) \\
 \end{align*}
 
 \begin{exercise}{Homework}{}
@@ -462,8 +462,8 @@ these two goals.
 \index{SVMR}
 \index{SVM!regression}
 \begin{marker}
-\paragraph*{Idea}: we want a regression algorithm that maintains the defining
-(and good) features of the SVMC\footnote{Support Vector Machine for Classification}:
+	\paragraph*{Idea}: we want a regression algorithm that maintains the defining
+	(and good) features of the SVMC\footnote{Support Vector Machine for Classification}:
 \end{marker}
 \begin{itemize}
 	\item \textbf{Sparsity} and obtention of SVs (Support Vectors).
@@ -488,7 +488,7 @@ these two goals.
 				ymin=-40,ymax=40,
 				ticks=none,
 				axis lines=none,
-        legend pos=north west,
+				legend pos=north west,
 			]
 			\pgfmathsetmacro{\rot}{45};
 
@@ -496,7 +496,7 @@ these two goals.
 
 				\draw[fill=blue,opacity=0.4] (-80,-10) rectangle (80,10);
 
-        \draw[line width=2pt] (-80,0) -- (80,0);
+				\draw[line width=2pt] (-80,0) -- (80,0);
 				\draw[dashed, line width=2pt] (-80,10) -- (80,10);
 				\draw[dashed, line width=2pt] (-80,-10) -- (80,-10);
 
@@ -508,10 +508,10 @@ these two goals.
 					\node [rightNode] at (rand*50, -rnd*30 - 10) {};
 				};
 
-      % \addplot[only marks,red,mark=*,mark size=1pt,domain=-50:50] {rand*30};
+				% \addplot[only marks,red,mark=*,mark size=1pt,domain=-50:50] {rand*30};
 
-        \addlegendimage{legend image code/.code={\node [rightNode,anchor=center] at (2mm,0){};}};
-        \addlegendentry{data};
+				\addlegendimage{legend image code/.code={\node [rightNode,anchor=center] at (2mm,0){};}};
+				\addlegendentry{data};
 				\addlegendimage{area legend,fill=blue,opacity=0.4};
 				\addlegendentry{$\varepsilon$-tube};
 
@@ -519,7 +519,7 @@ these two goals.
 
 		\end{axis}
 	\end{tikzpicture}
-  \caption{SVMR: regression with an $\varepsilon$-tube}
+	\caption{SVMR: regression with an $\varepsilon$-tube}
 \end{figure}
 
 \begin{itemize}
@@ -543,13 +543,13 @@ $\overline{\xi_i},\, \underline{\xi_i} \geq 0,\; i=1,\dots,n$,
 \begin{align*}
 	\min_{w,\,b,\,\xi,\,\overline{\xi},\,\underline{\xi}} &
 	\left\{ \frac{1}{2} \|w\|^2 +
-	C \sum_{i=1}^n \left(\overline{\xi}_i + \underline{\xi}_i \right) \right\}                                                  \\
+	C \sum_{i=1}^n \left(\overline{\xi}_i + \underline{\xi}_i \right) \right\}                                                                          \\
 	\text{s.t.}                                           & \quad \begin{rcases*}
 		                                                              (\omega^T x_i + b) \geq y_i + \varepsilon + \overline{\xi}_i  \\
 		                                                              (\omega^T x_i + b) \leq y_i - \varepsilon - \underline{\xi}_i \\
 		                                                              \overline{\xi}_i,\, \underline{\xi}_i \geq 0
-	                                                              \end{rcases*} \quad i=1,\dots,n \\
-                                                        && \text{Convex QP problem}
+	                                                              \end{rcases*} \quad i=1,\dots,n                         \\
+	                                                      &                                                                  & \text{Convex QP problem}
 \end{align*}
 
 \begin{align*}
